Fixes Name Tag issues: offscreen and creation every frame

--- a/client/assets/css/container-styling.css
+++ b/client/assets/css/container-styling.css
@@ -2,6 +2,8 @@ html, body{
     margin: 0px;
     padding: 0px;
     background-color: black;
+    width: 100%;
+    height: 100%;
 }
 #shell, #shell > * {
     position: absolute;
